--- a/style.css
+++ b/style.css
@@ -108,6 +108,20 @@ body{
     cursor: pointer;
 }
 
+label{
+    font-size: 20px;
+}
+
+.checkbox{
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+
+
+
+
 
 
 
